--- a/index.html
+++ b/index.html
@@ -1,115 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
+    <head>
     <meta charset="utf-8">
     <!-- This file has been downloaded from Bootsnipp.com. Enjoy! -->
-    <title>Zigzag Timeline Layout - Bootsnipp.com</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <title>Timeline (responsive) - Bootsnipp.com</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
- 
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-</head>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    </head>
+    
 <body>
 <div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <h3 class="text-center">Zigzag Timeline Layout (and Cats)</h3>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-      <ul class="timeline">
-        <li>
-          <div class="timeline-image">
-            <img class="img-circle img-responsive" src="http://lorempixel.com/250/250/cats/1" alt="">
-          </div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4>Step One</h4>
-              <h4 class="subheading">Subtitle</h4>
-            </div>
-            <div class="timeline-body">
-              <p class="text-muted">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </p>
-            </div>
-          </div>
-          <div class="line"></div>
-        </li>
-        <li class="timeline-inverted">
-          <div class="timeline-image">
-            <img class="img-circle img-responsive" src="http://lorempixel.com/250/250/cats/2" alt="">
-          </div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4>Step Two</h4>
-              <h4 class="subheading">Subtitle</h4>
-            </div>
-            <div class="timeline-body">
-              <p class="text-muted">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </p>
-            </div>
-          </div>
-          <div class="line"></div>
-        </li>
-        <li>
-          <div class="timeline-image">
-            <img class="img-circle img-responsive" src="http://lorempixel.com/250/250/cats/3" alt="">
-          </div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4>Step Three</h4>
-              <h4 class="subheading">Subtitle</h4>
-            </div>
-            <div class="timeline-body">
-              <p class="text-muted">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </p>
-            </div>
-          </div>
-          <div class="line"></div>
-        </li>
-        <li class="timeline-inverted">
-          <div class="timeline-image">
-            <img class="img-circle img-responsive" src="http://lorempixel.com/250/250/cats/4" alt="">
-          </div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4>Step Three</h4>
-              <h4 class="subheading">Subtitle</h4>
-            </div>
-            <div class="timeline-body">
-              <p class="text-muted">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </p>
-            </div>
-          </div>
-          <div class="line"></div>
-        </li>
-        <li>
-          <div class="timeline-image">
-            <img class="img-circle img-responsive" src="http://lorempixel.com/250/250/cats/5" alt="">
-          </div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4>Bonus Step</h4>
-              <h4 class="subheading">Subtitle</h4>
-            </div>
-            <div class="timeline-body">
-              <p class="text-muted">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </p>
-            </div>
-          </div>
-        </li>
-      </ul>
+    <div class="page-header">
+        <h1 id="timeline">History</h1>
     </div>
-  </div>
+    <ul class="timeline">
+        <li>
+          <div class="timeline-badge"><img src  = "img/stamp03507.jpg" height="60" width="60"></div>
+          <div class="timeline-panel" onclick = "location.href = 'http://www.qatar-stamps.com/stamp_details.php?recordID=3507&pos=0&page=1';" style="cursor:pointer;">
+            <div class="timeline-heading">
+              <h4 class="timeline-title">5th Anniversary of Sheikh Khalifa’s Accession – 1977</h4>
+            </div>
+            <div class="timeline-body">
+              <p>On the occasion of the 5th anniversary of Sheikh Khalifa’s accession to the throne Qatar issued a set of two stamps. The values issued were 20 Dirhams and 1.80 Riyals.</p>
+            </div>
+          </div>
+        </li>
+        <li class="timeline-inverted">
+          <div class="timeline-badge warning"><img src= "img/stamp03387.jpg" height = "60" width="60"></div>
+          <div class="timeline-panel" onclick = "location.href = 'http://www.qatar-stamps.com/stamp_details.php?recordID=3387&pos=0&page=1';" style="cursor:pointer;">
+            <div class="timeline-heading">
+              <h4 class="timeline-title">The 1977 Definitive Issue</h4>
+            </div>
+            <div class="timeline-body">
+              <p>Qatar issued its 6th definitive set of stamps in 1977 depicting Sheikh Khalifa bin Hamed Al-Thani. A total of 7 stamps were issued with the following values: 5D, 10D, 35D, 80D, 1R, 5 Rupees and 10 Rupees.</p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="timeline-badge danger"><img src= "img/stamp03993.jpg" height = "60" width="60">></div>
+            <div class="timeline-panel" onclick = "location.href = 'http://www.qatar-stamps.com/stamp_details.php?recordID=3993&pos=0&page=1';" style="cursor:pointer;">
+            <div class="timeline-heading">
+              <h4 class="timeline-title">25th Anniversary of the Arab Postal Union – 1977</h4>
+            </div>
+            <div class="timeline-body">
+              <p>To celebrate the occasion of the 25th anniversary of the Arab Postal Union Qatar issued a set of two stamps depicting the emblem of the APU. The values issued were 35 Dirhams and 1.35 Rials.</p>
+            </div>
+          </div>
+        </li>
+        <li class="timeline-inverted">
+            <div class="timeline-badge warning"><img src= "img/stamp03997.jpg" height = "60" width="60"></div>
+          <div class="timeline-panel" onclick = "location.href = 'http://www.qatar-stamps.com/stamp_details.php?recordID=3997&pos=0&page=1';" style="cursor:pointer;">
+            <div class="timeline-heading">
+              <h4 class="timeline-title">The 1st Qatar booklet – 1977</h4>
+            </div>
+            <div class="timeline-body">
+              <p>Qatar issued its first booklet in 1977 consisting of a total of 10 stamps. The values issued were 5 Dirhams (four copies), 10 Dirhams (3 copies), 35 Dirhams (2 copies) and 80 Dirhams.</p>
+            </div>
+          </div>
+        </li>
+    </ul>
 </div>
-<script type="text/javascript">
-
-</script>
-</body>
-</html>
+<script type="text/javascrip
