added back pulse

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="css/hover.css" rel="stylesheet" media="all">
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     </head>
@@ -20,7 +21,7 @@
     <ul class="timeline">
         <li>
           <div class="timeline-badge"><img src  = "img/stamp03507.jpg" height="60" width="60"></div>
-          <div class="timeline-panel" onclick = "location.href = 'http://www.qatar-stamps.com/stamp_details.php?recordID=3507&pos=0&page=1';" style="cursor:pointer;">
+          <div class="timeline-panel hvr-back-pulse" onclick = "location.href = 'http://www.qatar-stamps.com/stamp_details.php?recordID=3507&pos=0&page=1';" style="cursor:pointer;">
             <div class="timeline-heading">
               <h4 class="timeline-title">5th Anniversary of Sheikh Khalifa’s Accession – 1977</h4>
             </div>
@@ -31,7 +32,7 @@
         </li>
         <li class="timeline-inverted">
           <div class="timeline-badge warning"><img src= "img/stamp03387.jpg" height = "60" width="60"></div>
-          <div class="timeline-panel" onclick = "location.href = 'http://www.qatar-stamps.com/stamp_details.php?recordID=3387&pos=0&page=1';" style="cursor:pointer;">
+          <div class="timeline-panel hvr-back-pulse" onclick = "location.href = 'http://www.qatar-stamps.com/stamp_details.php?recordID=3387&pos=0&page=1';" style="cursor:pointer;">
             <div class="timeline-heading">
               <h4 class="timeline-title">The 1977 Definitive Issue</h4>
             </div>
@@ -42,7 +43,7 @@
         </li>
         <li>
           <div class="timeline-badge danger"><img src= "img/stamp03993.jpg" height = "60" width="60">></div>
-            <div class="timeline-panel" onclick = "location.href = 'http://www.qatar-stamps.com/stamp_details.php?recordID=3993&pos=0&page=1';" style="cursor:pointer;">
+            <div class="timeline-panel hvr-back-pulse" onclick = "location.href = 'http://www.qatar-stamps.com/stamp_details.php?recordID=3993&pos=0&page=1';" style="cursor:pointer;">
             <div class="timeline-heading">
               <h4 class="timeline-title">25th Anniversary of the Arab Postal Union – 1977</h4>
             </div>
@@ -53,7 +54,7 @@
         </li>
         <li class="timeline-inverted">
             <div class="timeline-badge warning"><img src= "img/stamp03997.jpg" height = "60" width="60"></div>
-          <div class="timeline-panel" onclick = "location.href = 'http://www.qatar-stamps.com/stamp_details.php?recordID=3997&pos=0&page=1';" style="cursor:pointer;">
+          <div class="timeline-panel hvr-back-pulse" onclick = "location.href = 'http://www.qatar-stamps.com/stamp_details.php?recordID=3997&pos=0&page=1';" style="cursor:pointer;">
             <div class="timeline-heading">
               <h4 class="timeline-title">The 1st Qatar booklet – 1977</h4>
             </div>
